More work on OpenAPI (does not compile at the moment).  Added API docs and generation
